updated readme, log undo/redo triangle

--- a/index.html
+++ b/index.html
@@ -1,68 +1,33 @@
-# cg-ichi
-A rudimentary modelling framework made using OpenGL  
+<!DOCTYPE html>
+<html>
+<head>
+	<title>CS 475 Computer Graphics Autumn 2017</title>
+</head>
+<body>
+<h2 align="center">CS 475 Computer Graphics Autumn 2017</h2>
 
-## Controls
+<h2 align="center">Assignment 1</h2>
+<h3 align="left">Varshith S 150050084 </h3>
+<h3 align="left">Harshith Goka 150050069 </h3>
 
-### Mode Switch
+<a href="README.md">User Manual</a>
+<h2> Key Points </h2>
+<p>
+<ul>
+	<li> Implemented a rudimentary modelling framework </li>
+	<li> Implemented all features mentioned in the problem statement </li>
+	<li> Added an "undo/redo last drawn triangle" feature </li>
+</ul>
+</p>
 
-`M` Modelling Mode  
-`I` Inspection Mode  
-
-### Modelling Mode
-
-`Left Mouse Click` - Add a point  
-`Shift + Left Mouse Click` - Remove the last added point  
-`C` Close the polygon started  
-
-`Ctrl + Z` Undo create the last triangle
-`Ctrl + Y` Redo create the last 'undo-ed' triangle
-
-`U` Set the color in `R G B` format in float in the terminal  
-
-`Z` Move drawing plane out  
-`X` Move drawing plane in  
-
-`W` Camera up  
-`A` Camera left  
-`S` Camera down  
-`D` Camera right  
-
-*Rotation not available in modelling mode*  
-
-### Inspection Mode  
-
-`R` Move camera so that centrod of the model is at the centre of the screen  
-
-`Z` Camera out  
-`X` Camera in  
-`W` Camera up  
-`A` Camera left  
-`S` Camera down  
-`D` Camera right  
-
-`Left` Rotate left about Y  
-`Right` Rotate right about Y  
-`Up` Rotate in about X  
-`Down` Rotate out about X  
-`PgUp` Rotate anti-clock about Z  
-`PgDown` Rotate clock about Z  
-
-### Saving/Loading Operations
-
-`K` - Save the current model
-	File name input via terminal (without extension)
-
-`L` - Load a model
-	File name input via terminal (without extension)
-
-#### TO DO
-
-- File Open/Close Error Handling
-- Terminal Feedback/Prompts
-	- State Information
-		- Mode
-		- Position of drawing place
-		- Current drawing color
-	- Prompts
-		- File name prompts
-		- ~~File error feedbacks~~
+<h2>Models Created</h2>
+<p>
+Lamp
+<img width="400px" src="src/lamp.png" alt="Lamp">
+Mjolnir
+<img width="400px" src="src/thor-hammer.png" alt="Thor Hammer">
+Fidget Spinner
+<img width="400px" src="src/fidget-spinner.png" alt="Fidget Spinner">
+</p>
+</body>
+</html>
