flipped nav controls; clean up; subm ready; updated html, readme

--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 <h3 align="left">Varshith S 150050084 </h3>
 <h3 align="left">Harshith Goka 150050069 </h3>
 
-<a href="README.md">User Manual</a>
-<h2> Key Points </h2>
+<h2> Points </h2>
 <p>
 <ul>
-	<li> Implemented a rudimentary modelling framework </li>
-	<li> Implemented all features mentioned in the problem statement </li>
-	<li> Added an "undo/redo last drawn triangle" feature </li>
+	<li> Implemented a simulation of the modelling viewing pipeline </li>
+	<li> Performed 3D clipping to avoid redundant rendering </li>
+	<li> Provided rotation, translation and zoom features to view the simulation better </li>
 </ul>
 </p>
 
-<h2>Models Created</h2>
+
+<h2> Note </h2>
 <p>
-Lamp
-<img width="400px" src="src/lamp.png" alt="Lamp">
-Mjolnir
-<img width="400px" src="src/thor-hammer.png" alt="Thor Hammer">
-Fidget Spinner
-<img width="400px" src="src/fidget-spinner.png" alt="Fidget Spinner">
+<ul>
+	<li> The models loaded into the scene; a lamp, a hammer and a fidget spinner, have been provided </li>
+	<li> The `myscene.scn` file stores the parameters that set the various aspects of the simulation </li>
+	<li> The controls to view the simulation have been provided in the markdown file attached below </li>
+</ul>
 </p>
+
+<a href="README.md">User Manual</a>
 </body>
 </html>
